# LestTrueTypeFont

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmap.c  cmap.cpp  cmap.h  configure_windows.sh  cvt.c  cvt.cpp  endianGeneral.c  endianGeneral.cpp  endianGeneral.h  fpgm.c  fpgm.cpp  gasp.c  gasp.cpp  glyf.c  glyf.cpp  glyf.h  head.c  head.cpp  head.h  hhea.c  hhea.cpp  hhea.h  hmtx.c  hmtx.cpp  hmtx.h  kern.cpp  lestTtf.c  lestTtf.cpp  lestTtf.h  lestTtfData.h  loca.c  loca.cpp  loca.h  main  main.c  main.cpp  (+22 more)
include/: vmtx.hpp
